            int                     NavigateButtonIndex;    // Mouse button index navigate action will react to (0-left, 1-right, 2-middle)
            int                     ContextMenuButtonIndex; // Mouse button index context menu action will react to (0-left, 1-right, 2-middle)

    BUGFIX: Avoid crash while destroying editor.

    BUGFIX: Save draw list used by editor between Begin() and End()
        There is a chance ImGui::GetWindowDrawList() will return different draw list
        while nodes are being composed. To avoid troubles of manipulating incorrect
        draw list one obtained in Begin() is remembered and used.

    BUGFIX: Avoid division by zero in ImCubicBezierBoundingRect

    BUGFIX: Don't stuck in delete action if user does not handle it

    BUGFIX: Enable use channel splitter inside Begin/End for node and pin. #28

    BUGFIX: Don't manipulate channels when editor is suspended #28

    BUGFIX: Fix ObjectId serialization

    BUGFIX: GroupNode resize instead of move on low zoom #87

    BUGFIX: Make Canvas work with Viewports (#91, #90)

    BUGFIX: Explicitly choose embedded GL3W as OpenGL extension loader (#96)

    BUGFIX: Application: Don't apply HiDPI logic for (-FLT_MAX,-FLT_MAX) mouse position

    BUGFIX: Editor: Clamp over-the-edge drag distance to prevent scrolling to infinity on focus lost

    BUGFIX: Editor: Consume scroll event (#73) (require ImGui 17909 or later)

    BUGFIX: Editor: Respect window focus while handling actions (#99)

    BUGFIX: Examples: Correct case of `data` directory (#97)

    BUGFIX: Canvas: Save/Restore CursorMaxPos only in Begin/End (#101)

    BUGFIX: Editor: Don't implicitly capture keyboard (#83)

    BUGFIX: Application: Reset key down state after loosing keyboard focus

    BUGFIX: Editor: Make off-screen dragging work again

    BUGFIX: ImGui: Disable obsolete functions (#103)
