@@ -93,6 +93,12 @@ enum class PinKind
     Output
 };
 
+enum class FlowDirection
+{
+    Forward,
+    Backward
+};
+
 
 //------------------------------------------------------------------------------
 enum StyleColor
@@ -270,7 +276,7 @@ ImDrawList* GetNodeBackgroundDrawList(NodeId nodeId);
 
 bool Link(LinkId id, PinId startPinId, PinId endPinId, const ImVec4& color = ImVec4(1, 1, 1, 1), float thickness = 1.0f);
 
-void Flow(LinkId linkId);
+void Flow(LinkId linkId, FlowDirection direction = FlowDirection::Forward);
 
 bool BeginCreate(const ImVec4& color = ImVec4(1, 1, 1, 1), float thickness = 1.0f);
 bool QueryNewLink(PinId* startId, PinId* endId);
