@@ -715,7 +715,7 @@ private:
     void UpdatePath();
     void ClearPath();
 
-    ImVec2 SamplePath(float distance);
+    ImVec2 SamplePath(float distance) const;
 
     void OnUpdate(float progress) override final;
     void OnStop() override final;
@@ -745,7 +745,7 @@ struct FlowAnimationController final : AnimationController
     FlowAnimationController(EditorContext* editor);
     virtual ~FlowAnimationController();
 
-    void Flow(Link* link);
+    void Flow(Link* link, FlowDirection direction = FlowDirection::Forward);
 
     virtual void Draw(ImDrawList* drawList) override final;
 
@@ -1405,7 +1405,7 @@ struct EditorContext
     void RegisterAnimation(Animation* animation);
     void UnregisterAnimation(Animation* animation);
 
-    void Flow(Link* link);
+    void Flow(Link* link, FlowDirection direction);
 
     void SetUserContext(bool globalSpace = false);
 
